1.3.6 - TBD

* Improved glass pane and iron bars rendering.
* Added rendering for the following Minecraft 1.9 block types:
    + Chorus Plant, Flower
    + Purpur Block, Pillar, Slab, Stairs
    + End Stone Bricks
    + Grass Path
* Added buttons to uniformly scale the 3D canvas.
* Replaced the status text embedded in the render preview by an overlay label.
* Added mob head rendering.
* Added sign text rendering.
* Signs are now rendered slightly taller, the same size as they appear in
  Minecraft.
* Fixed error causing the sun location to reset when rendering in headless mode.
* Added chunk grid at bedrock level in preview rendering mode.
* Fixed the parallel camera sometimes clipping world chunks.
* Fixed an issue with the water world rendering mode causing the water plane to
  have an incorrect vertical offset in large scenes.

1.3.5 - 2015-04-20
    * Added option to select visible chunks in the 2D map context menu
      (selects visible chunks inside the camera view indicator)
    * Nether portals now emit light
    * Re-engineered atmosphere and fog rendering, replaced it with a simpler
      but more customizable fog system. Fog density and color can be changed
      by the user (in the "Sky & Fog" tab).
    * Fixed stairs with fog render issue
    * Added a notification after changing the Y cutoff setting about reloading
      the chunks for the setting to take effect.
    * Added new tab icons in the Render Controls window. This fixes the issue
      with huge tabs when a high-resolution texture pack was used.
    * Improved huge mushroom rendering: mushroom blocks with some data values
      were rendered incorrectly
    * Fixed a rendering issue for corner stairs causing various configurations
      to render incorrectly
    * Fixed an error causing incorrect lighting of underwater blocks
    * Fixed button rendering (render new button orientations correctly)
    * The render reset confirmation feature now works as it should when the